--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_picker: 0.6.7
   firebase_storage: ^3.1.5
   flutter_swiper: ^1.1.6
+  flutter_plugin_pdf_viewer: any
+  syncfusion_flutter_pdfviewer: ^18.3.51-beta
 
   #IMPORTANT!!!!!!!!!!!!!!!! Add configuration for image_picker in Runner/Info.plist for iOS
 
