--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_plugin_pdf_viewer: any
   syncfusion_flutter_pdfviewer: ^18.3.51-beta
+  file_picker: 2.0.0
 
   #IMPORTANT!!!!!!!!!!!!!!!! Add configuration for image_picker in Runner/Info.plist for iOS
 
