--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,7 +46,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.wha_app3"
+        applicationId "com.WHA.wha_app3"
         minSdkVersion 29
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
