added modalities and added choosing image

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/suryapalinda/Library/Android/sdk/
-flutter.sdk=/Users/suryapalinda/Documents/flutter
-flutter.buildMode=release
+sdk.dir=C:\\Users\\shiti\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\shiti\\flutter
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
